[gd_scene load_steps=3 format=3 uid="uid://kn8rymlxabmy"]

[ext_resource type="Script" path="res://Scenes/main_men_button.gd" id="1_wrjtj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaswk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[node name="main_menu_button" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_aaswk")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_aaswk")
theme_override_styles/hover = SubResource("StyleBoxFlat_aaswk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aaswk")
theme_override_styles/normal = SubResource("StyleBoxFlat_aaswk")
text = "PLAY"
script = ExtResource("1_wrjtj")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
